[gd_scene load_steps=74 format=3 uid="uid://ccc2fqvx78ic8"]

[ext_resource type="Script" path="res://big_boss.gd" id="1_76brq"]
[ext_resource type="Texture2D" uid="uid://c1to20apxugre" path="res://Assets/big_boss_death_sheet.png" id="2_wpcf4"]
[ext_resource type="Texture2D" uid="uid://5bj6lnfhp5ak" path="res://Assets/big_boss_attack_sheet.png" id="3_j73gs"]
[ext_resource type="Texture2D" uid="uid://b6dpxpy8o3a37" path="res://Assets/big_boss_hurt_sheet.png" id="4_qr8la"]
[ext_resource type="Texture2D" uid="uid://dyo3u6ihidhdn" path="res://Assets/big_boss_idle_sheet.png" id="5_l8oxc"]
[ext_resource type="Texture2D" uid="uid://ctndnmkbpanfl" path="res://Assets/big_boss_walk_sheet.png" id="6_ibc3e"]
[ext_resource type="Texture2D" uid="uid://bpprjshsg7fi6" path="res://Assets/big_boss_throw_sheet.png" id="7_8jt3x"]
[ext_resource type="AudioStream" uid="uid://wlvgysvw0t38" path="res://Sounds/Hit - Single.MP3" id="8_0w1o8"]
[ext_resource type="AudioStream" uid="uid://ckr4agufj2w5b" path="res://Sounds/punch.mp3" id="9_um32t"]
[ext_resource type="AudioStream" uid="uid://b6ynir2ejd025" path="res://Sounds/Impact Hit 4.MP3" id="10_hc4t8"]
[ext_resource type="AudioStream" uid="uid://ck4p0ipskjsa5" path="res://Sounds/Heavy object Hit and body thud sound effect (mp3cut.net) (1).mp3" id="11_08m18"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f2xhv"]
atlas = ExtResource("2_wpcf4")
region = Rect2(0, 0, 396, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_qboda"]
atlas = ExtResource("2_wpcf4")
region = Rect2(396, 0, 396, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0xgt"]
atlas = ExtResource("2_wpcf4")
region = Rect2(792, 0, 396, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrqdy"]
atlas = ExtResource("2_wpcf4")
region = Rect2(0, 383, 396, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_guxtl"]
atlas = ExtResource("2_wpcf4")
region = Rect2(396, 383, 396, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8x4c"]
atlas = ExtResource("2_wpcf4")
region = Rect2(792, 383, 396, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_idmdm"]
atlas = ExtResource("2_wpcf4")
region = Rect2(0, 766, 396, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkamc"]
atlas = ExtResource("2_wpcf4")
region = Rect2(396, 766, 396, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul7q3"]
atlas = ExtResource("3_j73gs")
region = Rect2(0, 379, 370, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_soj2k"]
atlas = ExtResource("3_j73gs")
region = Rect2(370, 379, 370, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5j7k"]
atlas = ExtResource("3_j73gs")
region = Rect2(0, 758, 370, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ncdr"]
atlas = ExtResource("3_j73gs")
region = Rect2(370, 0, 370, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiib6"]
atlas = ExtResource("3_j73gs")
region = Rect2(0, 0, 370, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux55y"]
atlas = ExtResource("4_qr8la")
region = Rect2(0, 0, 362, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_fndot"]
atlas = ExtResource("4_qr8la")
region = Rect2(362, 0, 362, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs45r"]
atlas = ExtResource("4_qr8la")
region = Rect2(724, 0, 362, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_dafjl"]
atlas = ExtResource("4_qr8la")
region = Rect2(0, 379, 362, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufq8a"]
atlas = ExtResource("4_qr8la")
region = Rect2(362, 379, 362, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_275w6"]
atlas = ExtResource("4_qr8la")
region = Rect2(724, 379, 362, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo0rt"]
atlas = ExtResource("4_qr8la")
region = Rect2(0, 758, 362, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0lbu"]
atlas = ExtResource("4_qr8la")
region = Rect2(362, 758, 362, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcnqt"]
atlas = ExtResource("5_l8oxc")
region = Rect2(0, 0, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_q54nv"]
atlas = ExtResource("5_l8oxc")
region = Rect2(249, 0, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_62314"]
atlas = ExtResource("5_l8oxc")
region = Rect2(498, 0, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvjhp"]
atlas = ExtResource("5_l8oxc")
region = Rect2(747, 0, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd57p"]
atlas = ExtResource("5_l8oxc")
region = Rect2(0, 383, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_aek7u"]
atlas = ExtResource("5_l8oxc")
region = Rect2(249, 383, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyo8a"]
atlas = ExtResource("5_l8oxc")
region = Rect2(498, 383, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_xncid"]
atlas = ExtResource("5_l8oxc")
region = Rect2(747, 383, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaoes"]
atlas = ExtResource("5_l8oxc")
region = Rect2(0, 766, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_biwgb"]
atlas = ExtResource("5_l8oxc")
region = Rect2(249, 766, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_pit2i"]
atlas = ExtResource("5_l8oxc")
region = Rect2(498, 766, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7cyr"]
atlas = ExtResource("5_l8oxc")
region = Rect2(747, 766, 249, 383)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8wpm"]
atlas = ExtResource("6_ibc3e")
region = Rect2(0, 0, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_du6qx"]
atlas = ExtResource("6_ibc3e")
region = Rect2(249, 0, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r7ep"]
atlas = ExtResource("6_ibc3e")
region = Rect2(498, 0, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_dibk5"]
atlas = ExtResource("6_ibc3e")
region = Rect2(0, 385, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jt0q"]
atlas = ExtResource("6_ibc3e")
region = Rect2(249, 385, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhg0q"]
atlas = ExtResource("6_ibc3e")
region = Rect2(498, 385, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8lse"]
atlas = ExtResource("6_ibc3e")
region = Rect2(0, 770, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ct7k"]
atlas = ExtResource("6_ibc3e")
region = Rect2(249, 770, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vx7b"]
atlas = ExtResource("7_8jt3x")
region = Rect2(0, 0, 412, 389)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0sm0"]
atlas = ExtResource("7_8jt3x")
region = Rect2(412, 0, 412, 389)

[sub_resource type="AtlasTexture" id="AtlasTexture_upwvc"]
atlas = ExtResource("7_8jt3x")
region = Rect2(824, 0, 412, 389)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v3du"]
atlas = ExtResource("7_8jt3x")
region = Rect2(0, 389, 412, 389)

[sub_resource type="AtlasTexture" id="AtlasTexture_535cf"]
atlas = ExtResource("7_8jt3x")
region = Rect2(412, 389, 412, 389)

[sub_resource type="AtlasTexture" id="AtlasTexture_hon1m"]
atlas = ExtResource("7_8jt3x")
region = Rect2(824, 389, 412, 389)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqn04"]
atlas = ExtResource("7_8jt3x")
region = Rect2(0, 778, 412, 389)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n8gb"]
atlas = ExtResource("7_8jt3x")
region = Rect2(412, 778, 412, 389)

[sub_resource type="AtlasTexture" id="AtlasTexture_7763t"]
atlas = ExtResource("6_ibc3e")
region = Rect2(0, 0, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_liw36"]
atlas = ExtResource("6_ibc3e")
region = Rect2(249, 0, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho6ol"]
atlas = ExtResource("6_ibc3e")
region = Rect2(498, 0, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_us7g7"]
atlas = ExtResource("6_ibc3e")
region = Rect2(0, 385, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sy1j"]
atlas = ExtResource("6_ibc3e")
region = Rect2(249, 385, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yf1j"]
atlas = ExtResource("6_ibc3e")
region = Rect2(498, 385, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8hlh"]
atlas = ExtResource("6_ibc3e")
region = Rect2(0, 770, 249, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_actri"]
atlas = ExtResource("6_ibc3e")
region = Rect2(249, 770, 249, 385)

[sub_resource type="SpriteFrames" id="SpriteFrames_ewlio"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2xhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qboda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0xgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrqdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guxtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8x4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idmdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkamc")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul7q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soj2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5j7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ncdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiib6")
}],
"loop": false,
"name": &"enemy attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux55y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fndot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs45r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dafjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufq8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_275w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo0rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0lbu")
}],
"loop": false,
"name": &"hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcnqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q54nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62314")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvjhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd57p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aek7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyo8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xncid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaoes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biwgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pit2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7cyr")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8wpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du6qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r7ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dibk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jt0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhg0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8lse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ct7k")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vx7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0sm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upwvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v3du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_535cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hon1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqn04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n8gb")
}],
"loop": false,
"name": &"throw",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7763t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liw36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho6ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us7g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sy1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yf1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8hlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_actri")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ss3qw"]
radius = 141.0
height = 386.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dge0h"]
radius = 144.0
height = 400.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obuj6"]
size = Vector2(238, 337)

[sub_resource type="SpriteFrames" id="SpriteFrames_adk0l"]

[node name="Big Boss" type="CharacterBody2D"]
script = ExtResource("1_76brq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ewlio")
animation = &"enemy attack"
autoplay = "idle"
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ss3qw")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="BBHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BBHitbox"]
shape = SubResource("CapsuleShape2D_dge0h")

[node name="BBDealDamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BBDealDamageArea"]
position = Vector2(-72, 1.5)
shape = SubResource("RectangleShape2D_obuj6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BBDealDamageArea"]
visible = false
position = Vector2(-147, 21.25)
scale = Vector2(0.0825607, 0.396164)
sprite_frames = SubResource("SpriteFrames_adk0l")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_0w1o8")
volume_db = 10.0

[node name="gettinghitsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_um32t")

[node name="gettinghitsound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_hc4t8")

[node name="gettinghitsound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_08m18")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotater" type="Node2D" parent="."]

[connection signal="area_entered" from="BBHitbox" to="." method="_on_bb_hitbox_area_entered"]
[connection signal="area_entered" from="BBDealDamageArea" to="." method="_on_bb_deal_damage_area_area_entered"]
